Create ThemeSwitcher without MVVM

--- a/MauiCalculator.csproj
+++ b/MauiCalculator.csproj
@@ -53,15 +53,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="Resources\Styles\Dark.xaml">
+	  <MauiXaml Update="Resources\Themes\Dark.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="Resources\Styles\Light.xaml">
+	  <MauiXaml Update="Resources\Themes\Light.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Shared\Calculator.xaml">
